styles/general.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');

:root {
  --clr-black: #000000;
  --clr-white: #FFFFFF;
  --clr-rose-300: #FDA4AF;
  --clr-rose-500: #F43F5E;
  --clr-rose-600: #E11D48;
  --clr-rose-700: #BE123C;
  --clr-gray-200: #E4E4E7;
  --clr-gray-400: #A1A1AA;
  --clr-gray-600: #52525B;
  --clr-gray-700: #3F3F46;
  --clr-gray-900: #18181B;
  --clr-blue-gray-50: #F8FAFC;
  --clr-blue-gray-100: #F1F5F9;
  --clr-blue-gray-200: #E2E8F0;
  --clr-blue-gray-300: #CBD5E1;
  --clr-blue-gray-400: #94A3B8;
  --clr-blue-gray-500: #64748B;
  --clr-blue-gray-600: #475569;
  --clr-purple-600: #9333EA;
  --clr-purple-700: #7E22CE;
  --clr-blue-600: #2563EB;
  --clr-emerald-500: #10B981;

  --ff-poppins: 'poppins', serif;
  --ff-lora: 'lora', serif;
  --ff-roboto-condensed: 'roboto condensed', serif;
  --ff-abril-fatface: 'abril fatface', serif;
  --ff-poiret-one: 'poiret one', serif;

  --fs-3xsm: 0.4rem;
  --fs-2xsm: 0.6rem;
  --fs-xsm: 0.8rem;
  --fs-sm: 1rem;
  --fs-base: 1.1rem;
  --fs-md: 1.2rem;
  --fs-xmd: 1.3rem;
  --fs-2xmd: 1.6rem;
  --fs-lg: 1.8rem;
  --fs-xlg: 2.1rem;
  --fs-2xlg: 2.5rem;
  --fs-3xlg: 3.5rem;

  --fw-thin: 100;
  --fw-xlight: 200;
  --fw-light: 300;
  --fw-md: 500;
  --fw-sb: 600;
  --fw-bold: 700;
  --fw-xbold: 800;

  --fs-italic: italic;
  --fs-normal: normal;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
  scroll-padding-top: 7rem;

  height: 100%;
}

body {  padding-top: 7rem; }

hr {
  margin: 0;
  border-color: rgba(0, 0, 0, 0.1);
}

::selection {
  color: var(--clr-black);
  background-color: var(--clr-blue-gray-200);
}

